--- a/Home.html
+++ b/Home.html
@@ -46,6 +46,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://192.168.100.10/wagw" style="padding: 10px 20px;">WAgw</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://forms.gle/NZ3czkaUpqkRcxMP9" target="_blank" style="padding: 10px 20px;">Absensi Kehadiran</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://forms.gle/KbSMEQGAKbFrfwCn7" target="_blank" style="padding: 10px 20px;">Pulang</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vR-Jx8sUw3YY_HytEYXwUmqAoNbVElYMbl9auAudIbaBI4ySJsBvfEbX-qv6zSLdo8qBM2nSyTZOApb/pubhtml?gid=17157019&amp;single=true" target="_blank" style="padding: 10px 20px;">Rekap Kehadiran</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -57,6 +58,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://192.168.100.10/wagw" style="padding: 10px 20px;">WAgw</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://forms.gle/NZ3czkaUpqkRcxMP9" target="_blank" style="padding: 10px 20px;">Absensi Kehadiran</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://forms.gle/KbSMEQGAKbFrfwCn7" target="_blank" style="padding: 10px 20px;">Pulang</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vR-Jx8sUw3YY_HytEYXwUmqAoNbVElYMbl9auAudIbaBI4ySJsBvfEbX-qv6zSLdo8qBM2nSyTZOApb/pubhtml?gid=17157019&amp;single=true" target="_blank" style="padding: 10px 20px;">Rekap Kehadiran</a>
 </li></ul>
               </div>
             </div>
