--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-b5d2"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-b5d2"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1370" data-image-height="705">
           <img src="images/logofix.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -41,24 +41,14 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://id.labkom.my.id:453/sisfo/" style="padding: 10px 20px;">Jibas</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://id.labkom.my.id:453/mikhmon/" style="padding: 10px 20px;">Mikhmon</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://192.168.100.10/wagw" style="padding: 10px 20px;">WAgw</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://forms.gle/NZ3czkaUpqkRcxMP9" target="_blank" style="padding: 10px 20px;">Absensi Kehadiran</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://forms.gle/KbSMEQGAKbFrfwCn7" target="_blank" style="padding: 10px 20px;">Pulang</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vR-Jx8sUw3YY_HytEYXwUmqAoNbVElYMbl9auAudIbaBI4ySJsBvfEbX-qv6zSLdo8qBM2nSyTZOApb/pubhtml?gid=17157019&amp;single=true" target="_blank" style="padding: 10px 20px;">Rekap Kehadiran</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://id.labkom.us:8829/sisfo/" style="padding: 10px 20px;">Jibas</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://id.labkom.my.id:453/sisfo/" style="padding: 10px 20px;">Jibas</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://id.labkom.my.id:453/mikhmon/" style="padding: 10px 20px;">Mikhmon</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://192.168.100.10/wagw" style="padding: 10px 20px;">WAgw</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://forms.gle/NZ3czkaUpqkRcxMP9" target="_blank" style="padding: 10px 20px;">Absensi Kehadiran</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://forms.gle/KbSMEQGAKbFrfwCn7" target="_blank" style="padding: 10px 20px;">Pulang</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vR-Jx8sUw3YY_HytEYXwUmqAoNbVElYMbl9auAudIbaBI4ySJsBvfEbX-qv6zSLdo8qBM2nSyTZOApb/pubhtml?gid=17157019&amp;single=true" target="_blank" style="padding: 10px 20px;">Rekap Kehadiran</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://id.labkom.us:8829/sisfo/" style="padding: 10px 20px;">Jibas</a>
 </li></ul>
               </div>
             </div>
@@ -84,8 +74,8 @@
                   </div>
                 </div>
                 <h5 class="u-text u-text-4">Jibas Online</h5>
-                <p class="u-text u-text-default u-text-5">Prioritas diakses ketika tidak berada dikantor</p>
-                <a href="http://id.labkom.my.id:453/sisfo/jibas/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-1" target="_blank">KUNJUNGI</a>
+                <p class="u-text u-text-default u-text-5">Pendataan Santri dan Ustadz PPDU.</p>
+                <a href="http://id.labkom.us:8829/sisfo/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-1" target="_blank">KUNJUNGI</a>
               </div>
             </div>
             <div class="u-align-left u-container-style u-gradient u-list-item u-repeater-item u-list-item-2">
@@ -97,7 +87,7 @@
                 </div>
                 <h5 class="u-text u-text-7">Jibas LAN</h5>
                 <p class="u-text u-text-default u-text-8">Ketika di kantor sebaiknya mengakses yang ini. Supaya internet tidak lemot.</p>
-                <a href="http://192.168.100.10/sisfo" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-2" target="_blank"> KUNJUNGI</a>
+                <a href="#" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-2" target="_blank"> KUNJUNGI</a>
               </div>
             </div>
             <div class="u-align-left u-container-style u-gradient u-list-item u-repeater-item u-list-item-3">
@@ -109,7 +99,7 @@
                 </div>
                 <h5 class="u-text u-text-10">Jibas Modifikasi Online</h5>
                 <p class="u-text u-text-default u-text-11">Bisa diakses online</p>
-                <a href="http://id.labkom.my.id:453/siji/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-3" target="_blank"> KUNJUNGI</a>
+                <a href="#" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-3" target="_blank"> KUNJUNGI</a>
               </div>
             </div>
             <div class="u-align-left u-container-style u-gradient u-list-item u-repeater-item u-list-item-4">
@@ -121,7 +111,7 @@
                 </div>
                 <h5 class="u-text u-text-13">Jibas Modifikasi LAN</h5>
                 <p class="u-text u-text-default u-text-14">Diakses melalui jaringan lokal pondok</p>
-                <a href="http://192.168.100.10/siji" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-4" target="_blank"> KUNJUNGI</a>
+                <a href="#" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-4" target="_blank"> KUNJUNGI</a>
               </div>
             </div>
           </div>
