--- a/Home.html
+++ b/Home.html
@@ -79,8 +79,8 @@
                 </div>
                 <h5 class="u-text u-text-4">PPDU Putra Online</h5>
                 <p class="u-text u-text-default u-text-5">Diakses ketika diluar kantor</p>
-                <a href="http://us.labkom.us:5955/sisfo/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-1" target="_blank">Jibas online</a>
-                <a href="http://us.labkom.us:5955/siji/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-2" target="_blank">Jibas modifikasi online</a>
+                <a href="http://sisfodu.pagekite.me/sisfo/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-1" target="_blank">Jibas online</a>
+                <a href="http://sisfodu.pagekite.me/siji/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-text-body-color u-btn-2" target="_blank">Jibas modifikasi online</a>
               </div>
             </div>
             <div class="u-align-left u-container-style u-gradient u-list-item u-repeater-item u-list-item-2">
